desktop view done

--- a/index.html
+++ b/index.html
@@ -81,33 +81,51 @@
                 <img src="/images/architect.png" alt="">
             </div>
         </section>
+        <div class="experience-button">
         <button class="button-primary">10+Year Experience</button>
+        </div>
+        <!-- Facts section -->
         <section class="facts">
             <h2 class="section-title">Some Facts</h2>
-            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
             <div class="stat">
                 <div class="awards">
                     <i class="fa-solid fa-award"></i>
                     <h3 class="stat-title">54</h3>
                     <p class="stat-description">Awards Winnings</p>
                 </div>
-                <div class="awards">
-                    <i class="fa-solid fa-award"></i>
+                <div class="projects">
+                    <i class="fa-solid fa-sheet-plastic"></i>
                     <h3 class="stat-title">54</h3>
                     <p class="stat-description">Awards Winnings</p>
                 </div>
-                <div class="awards">
-                    <i class="fa-solid fa-award"></i>
+                <div class="clients">
+                    <i class="fa-solid fa-list-check"></i>
                     <h3 class="stat-title">54</h3>
                     <p class="stat-description">Awards Winnings</p>
                 </div>
-                <div class="awards">
-                    <i class="fa-solid fa-award"></i>
+                <div class="email">
+                    <i class="fa-solid fa-envelope-circle-check"></i>
                     <h3 class="stat-title">54</h3>
                     <p class="stat-description">Awards Winnings</p>
                 </div>
             </div>
         </section>
+        <section class="sponsors">
+            <h2 class="section-title">Our Sponsors</h2>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
+            <div class="sponsor-name">
+                <img src="/images/sponsors/spotify.png" alt="">
+                <img src="/images/sponsors/amazon.png" alt="">
+                <img src="/images/sponsors/google.png" alt="">
+                <img src="/images/sponsors/telerama.png" alt="">
+                <img src="/images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
+        <footer>
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </footer>
     </main>
 </body>
 </html>
