--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
                 <button class="button-primary">Explore More</button>
             </div>
             <div class="banner-image">
-            <img src="/images/banner.png" alt="">
+            <img src="./images/banner.png" alt="">
             </div>
         </div>
     </header>  
@@ -42,10 +42,10 @@
         <!-- Quick list section -->
         <section class="quick-list">
             <div class="list-images">
-                <img src="/images/team1.png" alt="">
-                <img src="/images/team2.png" alt="">
-                <img src="/images/team3.png" alt="">
-                <img src="/images/team4.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team4.png" alt="">
             </div>
             <div class="list-text">
                 <h2 class="section-title"><span class="grey">Quick list</span> of our <span class="yellow">features</span></h2>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="feature-image">
-                <img src="/images/architect.png" alt="">
+                <img src="./images/architect.png" alt="">
             </div>
         </section>
         <div class="experience-button">
@@ -115,11 +115,11 @@
             <h2 class="section-title">Our Sponsors</h2>
             <p class="section-description">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
             <div class="sponsor-name">
-                <img src="/images/sponsors/spotify.png" alt="">
-                <img src="/images/sponsors/amazon.png" alt="">
-                <img src="/images/sponsors/google.png" alt="">
-                <img src="/images/sponsors/telerama.png" alt="">
-                <img src="/images/sponsors/figma.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
             </div>
         </section>
 
