--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
                 </div>
                 <div class="projects">
                     <i class="fa-solid fa-sheet-plastic"></i>
-                    <h3 class="stat-title">54</h3>
-                    <p class="stat-description">Awards Winnings</p>
+                    <h3 class="stat-title">1458</h3>
+                    <p class="stat-description">Project Finished</p>
                 </div>
                 <div class="clients">
                     <i class="fa-solid fa-list-check"></i>
-                    <h3 class="stat-title">54</h3>
-                    <p class="stat-description">Awards Winnings</p>
+                    <h3 class="stat-title">590</h3>
+                    <p class="stat-description">Clients Worked</p>
                 </div>
                 <div class="email">
                     <i class="fa-solid fa-envelope-circle-check"></i>
-                    <h3 class="stat-title">54</h3>
-                    <p class="stat-description">Awards Winnings</p>
+                    <h3 class="stat-title">22578</h3>
+                    <p class="stat-description">Email Send</p>
                 </div>
             </div>
         </section>
