--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </nav>
         <div class="banner">
             <div class="banner-text">
-                <h1>Brand New Group of Architects</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h1>Brand New<br> Group of Architects</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which don't look even</p>
                 <button class="button-primary">Explore More</button>
             </div>
             <div class="banner-image">
