--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </nav>
         <div class="banner">
             <div class="banner-text">
-                <h1>Brand New<br> Group of Architects</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which don't look even</p>
+                <h1 class="banner-title">Brand New<br> Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which don't look even</p>
                 <button class="button-primary">Explore More</button>
             </div>
             <div class="banner-image">
@@ -56,7 +56,7 @@
         <!-- Features -->
         <section class="features">
             <div class="features-text">
-                <h2 class="section-title">Features you will love & enjoy</h2>
+                <h2 class="section-title special">Features you will love & enjoy</h2>
                 <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <div class="feature-description">
                     <div>
