--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
         <div class="experience-button">
-        <button class="button-primary">10+Year Experience</button>
+        <button class="button-primary experience">10+Year Experience</button>
         </div>
         <!-- Facts section -->
         <section class="facts">
