--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 </div>
             </div>
         </section>
+        <!-- Sponsor Section -->
         <section class="sponsors">
             <h2 class="section-title">Our Sponsors</h2>
             <p class="section-description">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
@@ -122,7 +123,7 @@
                 <img src="./images/sponsors/figma.png" alt="">
             </div>
         </section>
-
+        <!-- Footer Section -->
         <footer>
             <p>All rights reserved copyright@2023 startup landing page design</p>
         </footer>
