--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
                 </div>
             </div>
         </section>
+        <!-- Our Locations -->
+        <section class="locations">
+            <h2 class="section-title">Our Locations</h2>
+            <p class="section-description">We are everywhere for your convenience</p>
+            <div class="countries">
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    </h3>Bangladesh</h3>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    </h3>India</h3>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    </h3>Germany</h3>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    </h3>USA</h3>
+            </div>
+            </div>
+        </section>
         <!-- Sponsor Section -->
         <section class="sponsors">
             <h2 class="section-title">Our Sponsors</h2>
