--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             <div class="countries">
                 <div>
                     <i class="fa-solid fa-location-dot"></i>
-                    </h3>Bangladesh</h3>
+                    <h3>Bangladesh</h3>
                 </div>
                 <div>
                     <i class="fa-solid fa-location-dot"></i>
-                    </h3>India</h3>
+                    <h3>India</h3>
                 </div>
                 <div>
                     <i class="fa-solid fa-location-dot"></i>
-                    </h3>Germany</h3>
+                    <h3>Germany</h3>
                 </div>
                 <div>
                     <i class="fa-solid fa-location-dot"></i>
-                    </h3>USA</h3>
+                    <h3>USA</h3>
             </div>
             </div>
         </section>
